Refactor URL handling to use URI for HTTP connections